--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -23,7 +23,6 @@ body {
   line-height: 34px;
   border-radius: 11px;
   background: #282828;
-  color: white;
   border: none;
   outline: none;
   display: flex;
@@ -37,6 +36,11 @@ body {
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
   font-weight: bold;
 }
+.container button a{
+  color: white;
+  text-decoration: none;
+  
+}
 
 .container button i {
   border-radius: 50%;
@@ -46,8 +50,20 @@ body {
   width: 28px;
   height: 28px;
   display: flex;
+  padding-right: 5px;
   justify-content: center;
   align-items: center;
   font-size: 14px;
   font-weight: bold;
+}
+.container button:hover {
+  cursor: pointer;
+  background-color: #635900;
+  color: #282828;
+  transition: all linear 0.3s;
+}
+.container button:hover i{
+  background-color: #282828;
+  transition: all linear 0.3s;
+  color: #f9c514;
 }
