--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  /* overflow: hidden; */
   transform: rotate(90deg);
+  height: 100%;
+  width: 100%;
 }
 
 .container {
@@ -14,8 +15,8 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  margin: 0 auto;
-  margin-top: 250px;
+  /* margin: 0 auto; */
+  /* margin-top: 250px; */
   height: 390px;
   width: 100%;
   display: flex;
@@ -24,22 +25,23 @@ body {
 }
 .container button {
   border-radius: 8px;
-  /* width: 120px; */
-  line-height: 34px;
-  border-radius: 11px;
+  line-height: 20px;
+  border-radius: 5px;
   background: #282828;
   border: none;
   outline: none;
+  gap: 5px;
+  padding: 0px 3px;
+  font-size: 6px;
+  margin-bottom: 23px;
+  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  margin-right: 15px;
+  margin-top: 5px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  padding: 5px 10px;
-  margin-right: 35px;
-  font-size: 12px;
-  margin-bottom: 30px;
-  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
-  font-weight: bold;
 }
 .container button a {
   color: white;
@@ -48,16 +50,15 @@ body {
 
 .container button i {
   border-radius: 50%;
-  padding: 5px;
+  /* padding: 3px; */
   background-color: #f9c514;
   color: #282828;
-  width: 28px;
-  height: 28px;
+  width: 15px;
+  height: 15px;
   display: flex;
-  padding-right: 5px;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
+  font-size: 7px;
   font-weight: bold;
 }
 .container button:hover {
