--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,3 +1,5 @@
+@media (max-width: 768px) and (orientation: portrait) {
+
 * {
   margin: 0;
   padding: 0;
@@ -5,9 +7,9 @@
 }
 
 body {
-  transform: rotate(90deg);
-  height: 100%;
-  width: 100%;
+  /* transform: rotate(90deg); */
+  height: 100vh;
+  width: 100vw;
 }
 
 .container {
@@ -71,4 +73,7 @@ body {
   background-color: #282828;
   transition: all linear 0.3s;
   color: #f9c514;
+}
+
+
 }
