--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,78 +1,48 @@
-@media (max-width: 768px) and (orientation: portrait) {
-
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  border: none;
 }
-
-body {
-  /* transform: rotate(90deg); */
-  height: 100vh;
+body{
   width: 100vw;
-}
-
-.container {
+  height: 100vh;
+  background-color: aquamarine;
   background-image: url("../images/Home-page 1.png");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  /* margin: 0 auto; */
-  /* margin-top: 250px; */
-  height: 390px;
-  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-.container button {
-  border-radius: 8px;
-  line-height: 20px;
-  border-radius: 5px;
-  background: #282828;
-  border: none;
-  outline: none;
-  gap: 5px;
-  padding: 0px 3px;
-  font-size: 6px;
-  margin-bottom: 23px;
-  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
-  font-weight: bold;
-  margin-right: 15px;
-  margin-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container button a {
-  color: white;
-  text-decoration: none;
-}
 
-.container button i {
-  border-radius: 50%;
-  /* padding: 3px; */
-  background-color: #f9c514;
-  color: #282828;
-  width: 15px;
-  height: 15px;
+button{
+  /* margin-top: 50px; */
+  margin-bottom: 32px;
+  margin-right: 36px;
+  font-size: 10px;
+  padding: 7px 12px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 7px;
-  font-weight: bold;
-}
-.container button:hover {
-  cursor: pointer;
-  background-color: #635900;
-  color: #282828;
-  transition: all linear 0.3s;
-}
-.container button:hover i {
   background-color: #282828;
-  transition: all linear 0.3s;
-  color: #f9c514;
+  gap: 7px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
+button i{
+  padding: 6px 6.5px;
+  border-radius: 50%;
+  background-color: #f3c21f;
+  color: #282828;
+}
 
+button a{
+  color: white;
+  font-weight: 600;
 }
