--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -33,6 +33,7 @@ button{
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  transition: .3s;
 }
 
 button i{
@@ -46,3 +47,14 @@ button a{
   color: white;
   font-weight: 600;
 }
+
+button:hover{
+  background-color: #f3c21f;
+
+}
+
+button:hover i{
+  background-color: #282828;
+  color: #f3c21f;
+}
+
