--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -98,3 +98,39 @@ button:hover i{
     bottom: 3%;
   }
 }
+
+
+@media (max-height: 650px) {
+ 
+  button {
+    bottom: 2.5%;
+  }
+}
+
+@media (max-height: 600px) {
+ 
+  button {
+    bottom: 1.5%;
+  }
+}
+
+@media (max-height: 550px) {
+ 
+  button {
+    bottom: 1%;
+  }
+}
+
+@media (max-height: 500px) {
+
+  button {
+    bottom: 0.5%;
+  }
+}
+
+@media (max-height: 450px) {
+ 
+  button {
+    bottom: 0;
+  }
+}
